change tmp filename pattern to avoid misinterpretation

In the mentioned bugreport, kio_man is used with the url "man:tar"
firefox, which loads the tmp file kioexec created, seems to have a problem with the filename ending in
.tar as it thinks the file is a TAR file. The problem stems from the fact that kioexec creates the krun tmp filename by the
pattern <pid>.<jobnum>.<filename> and in this case filename == "tar"
A simple solution to not create a tmpfilename which can be misinterpreted is by changing "." -> "_" in the name pattern
so that the created filename does not have an "extension" part.
BUG: 287551
FIXED-IN: 4.9.1